export default {
  INITIAL: 'INITIAL',
  INITIAL_NEXT_BUTTON1: 'INITIAL_NEXT_BUTTON1',
  INITIAL_NEXT_BUTTON2: 'INITIAL_NEXT_BUTTON2',
  INITIAL_NEXT_BUTTON3: 'INITIAL_NEXT_BUTTON3',
  CHOOSE_LOGIN: 'CHOOSE_LOGIN',
  SIGN_UP: 'SIGN_UP',
  SIGN_UP_BUTTON: 'SIGN_UP_BUTTON',
  SIGN_UP_EMAIL: 'SIGN_UP_EMAIL',
  SIGN_UP_PASSWORD: 'SIGN_UP_PASSWORD',
  SIGN_UP_REGISTER_BUTTON: 'SIGN_UP_REGISTER_BUTTON',
  SIGN_IN: 'SIGN_IN',
  SIGN_IN_BUTTON: 'SIGN_IN_BUTTON',
  SIGN_IN_EMAIL: 'SIGN_IN_EMAIL',
  SIGN_IN_PASSWORD: 'SIGN_IN_PASSWORD',
  SIGN_IN_WITH_GOOGLE_BUTTON: 'SIGN_IN_WITH_GOOGLE_BUTTON',
  SIGN_IN_EMAIL_BUTTON: 'SIGN_IN_EMAIL_BUTTON',
  HOME: 'HOME',
  MENU_HEADER_LEFT_BUTTON: 'MENU_HEADER_LEFT_BUTTON',
  MENU_DRAWER_ITEMS: 'MENU_DRAWER_ITEMS',
  USER_INFO_SCREEN: 'USER_INFO_SCREEN',
  USER_INFO_SIGN_OUT_BUTTON: 'USER_INFO_SIGN_OUT_BUTTON',
  TODO_OPEN_INPUT_BUTTON: 'TODO_OPEN_INPUT_BUTTON',
  TODO_INPUT_SCREEN: 'TODO_INPUT_SCREEN',
  TODO_INPUT_TITLE: 'TODO_INPUT_TITLE',
  TODO_INPUT_DETAIL: 'TODO_INPUT_DETAIL',
  TODO_INPUT_CLOSE: 'TODO_INPUT_CLOSE',
  TODO_INPUT_ADD_BUTTON: 'TODO_INPUT_ADD_BUTTON',
  TODO_INPUT_DISMISS: 'TODO_INPUT_DISMISS',
  TODO_ROW_DONE: 'TODO_ROW_DONE',
  TODO_ROW_NOT_DONE: 'TODO_ROW_NOT_DONE',
  TODO_ROW_DELETE: 'TODO_ROW_DELETE',
  TODO_DETAIL_SCREEN: 'TODO_DETAIL_SCREEN',
  TODO_DETAIL_INPUT_TITLE: 'TODO_DETAIL_INPUT_TITLE',
  TODO_DETAIL_INPUT_DETAIL: 'TODO_DETAIL_INPUT_DETAIL',
  TODO_DETAIL_SUBMIT_BUTTON: 'TODO_DETAIL_SUBMIT_BUTTON',
};
